Attempt to fix font on mobile

--- a/HomePageStyle.css
+++ b/HomePageStyle.css
@@ -2,7 +2,9 @@ body {
     background-color: rgb(237, 225, 211);
     text-align: center;
     color: rgb(59, 47, 61);
-    font-family: "Comic Sans MS", "Comic Sans", cursive;
+
+    font-family: 'Comic Sans MS';
+    src: url("Fonts/comici.ttf");
 }
 a{
     color:rgb(138, 54, 202);
