--- a/Wordle/Wordle.css
+++ b/Wordle/Wordle.css
@@ -2,7 +2,8 @@ body {
     background-color: rgb(255, 182, 233);
     text-align: center;
     color: rgb(0, 0, 0);
-    font-family: "Comic Sans MS", "Comic Sans", cursive;
+    font-family: 'Comic Sans MS';
+    src: url("Fonts/comici.ttf");
 }
 
 hr {
